# Bdayblaze

./: .env.example  .gitignore  ARCHITECTURE.md  NOTICE  PRIVACY.md  README.md  TERMS.md  index.html  pyproject.toml  render.yaml  robots.txt  site.js  sitemap.xml  styles.css
docs/: config.js  index.html  security-final-audit-2026-04-28.md  styles.css
help/: index.html
migrations/: 001_initial.sql  002_announcement_templates_and_batches.sql  003_announcement_themes_and_birth_month_index.sql  004_operator_ready_pass.sql  005_server_anniversary_kind.sql  006_studio_audit_channel_and_runtime_notes.sql  007_signature_feature_wave.sql  008_reaction_quest_tracking.sql  009_guild_announcement_surfaces.sql  010_processing_event_index.sql  011_topgg_vote_receipts.sql  012_topgg_vote_reminders.sql
privacy/: index.html
terms/: index.html
tests/: test_announcement_presentation.py  test_announcement_surfaces.py  test_announcement_template.py  test_birthday_commands.py  test_birthday_logic.py  test_birthday_service_import_export.py  test_birthday_service_queries.py  test_bot_error_handling.py  test_bot_reactions.py  test_bot_setup.py  test_content_policy.py  test_embed_budgets.py  test_experience_service.py  test_health_service.py  test_http_health.py  test_info_commands.py  test_info_embeds.py  test_media_validation.py  test_migrations.py  test_operator_summary.py  test_permission_diagnostics.py  test_scheduler_service.py  test_settings_service.py  test_static_site.py  test_studio_audit.py  test_studio_views.py  test_timezones.py  test_upcoming_resolution.py  test_vote_ui.py  (+2 more)
(+48 files in other folders)
