[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "bdayblaze"
version = "0.1.0"
description = "Production-minded Discord birthday bot foundation."
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
  "aiohttp>=3.10,<4.0",
  "asyncpg>=0.30,<0.31",
  "discord.py>=2.5,<2.6",
  "python-dotenv>=1.0,<2.0",
  "structlog>=25.2,<26.0",
  "tzdata>=2025.2,<2026.0",
]

[project.urls]
Repository = "https://github.com/arno-create/Bdayblaze"

[project.optional-dependencies]
dev = [
  "mypy>=1.15,<2.0",
  "pytest>=8.3,<9.0",
  "pytest-asyncio>=0.25,<0.26",
  "ruff>=0.11,<0.12",
]

[project.scripts]
bdayblaze = "bdayblaze.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/bdayblaze"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "UP",
  "B",
  "ASYNC",
  "RUF",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
packages = ["bdayblaze"]
exclude = ["tests"]

[[tool.mypy.overrides]]
module = ["asyncpg", "asyncpg.*", "structlog", "structlog.*"]
ignore_missing_imports = true
